--- a/resources/presets/banner/resources/views/layout/_banner.antlers.html
+++ b/resources/presets/banner/resources/views/layout/_banner.antlers.html
@@ -9,6 +9,7 @@
         x-data="{ visible: $persist(true).using(sessionStorage).as('bannerVisible') }"
         x-show="visible"
         class="fluid-grid h-auto py-3 bg-primary"
+        x-collapse
         x-cloak
     >
         <div class="span-content flex justify-between items-center gap-x-4">
