Remove double group class

--- a/resources/presets/events/resources/views/components/_events_item.antlers.html
+++ b/resources/presets/events/resources/views/components/_events_item.antlers.html
@@ -20,7 +20,7 @@
             {{ partial:typography/time as="span" :content="{{ singular_handle }}_date_end" format="h:mm" }}
         </time>
 
-        <a href="{{ url }}" class="group group">
+        <a href="{{ url }}" class="group">
             {{ partial:typography/h3 :content="title" class="underline decoration-primary decoration-2 underline-offset-2 group-hover:text-primary motion-safe:transition-colors" }}
         </a>
 
