--- a/resources/presets/default_blocks/resources/views/layout/_default_blocks.antlers.html
+++ b/resources/presets/default_blocks/resources/views/layout/_default_blocks.antlers.html
@@ -1,6 +1,6 @@
 {{#
-    @name Block Groups
-    @desc Renders Block Groups based on visibility settings
+    @name Default blocks
+    @desc Renders Default blocks based on visibility settings
     @param position The position to render blocks for (after_content, before_content or before_footer)
 #}}
 
@@ -8,8 +8,8 @@
 {{ _requested_position = position ?? 'after_content' }}
 {{ _slug = label | slugify}}
 
-{{# Loop through all block groups #}}
-{{ block_groups:block_groups }}
+{{# Loop through all default blocks #}}
+{{ default_blocks:default_blocks }}
     
     {{# Only process groups with auto-positioning in the requested position #}}
     {{ if position != 'none' && position == _requested_position }}
@@ -48,7 +48,7 @@
         {{# Render page builder blocks if conditions are met #}}
         {{ if _should_show && page_builder }}
             {{ if _requested_position == 'before_footer' }}
-                <div id="{{ _slug }}" class="py-12 md:py-16 lg:py-24 stack-12 md:stack-16 lg:stack-24" data-block-group="{{ _slug }}">
+                <div id="{{ _slug }}" class="py-12 md:py-16 lg:py-24 stack-12 md:stack-16 lg:stack-24" data-default-block="{{ _slug }}">
                     {{ page_builder scope="block" }}
                         {{ partial src="page_builder/{type}" }}
                     {{ /page_builder }}
@@ -62,4 +62,4 @@
         
     {{ /if }}
     
-{{ /block_groups:block_groups }}
+{{ /default_blocks:default_blocks }}
