--- a/resources/presets/intranet/resources/views/page_builder/_password_forgotten.antlers.html
+++ b/resources/presets/intranet/resources/views/page_builder/_password_forgotten.antlers.html
@@ -9,29 +9,27 @@
     {{ redirect to="{ intranet:account_entry | url }" }}
 {{ /if }}
 
-<section class="overflow-hidden -mt-12 md:-mt-20">
-    <div class="fluid-container grid md:grid-cols-12 gap-8 md:gap-12">
-        <div class="md:col-span-6 lg:col-start-4 relative p-6 mr-2 mb-2 bg-white rounded-lg" id="form">
-            <div class="absolute top-2 -right-2 -bottom-2 left-2 z-behind rounded-lg rounded-br-xl bg-secondary"></div>
+<section class="fluid-grid">
+    <div class="span-content md:col-span-6 md:col-start-[col-1] stack-8" id="form">
+        {{ partial:typography/prose }}
+            {{ block:introduction }}
+        {{ /partial:typography/prose }}
 
-            {{ partial:typography/prose class="prose-sm [&>h1,&>h2]:text-secondary [&>h1,&>h2]:text-4xl [&>h1,&>h2]:mb-2 mb-8" }}
-                {{ block:introduction }}
-            {{ /partial:typography/prose }}
+        {{ user:forgot_password_form reset_url="{ intranet:password_reset_entry | url }" redirect="#form" error_redirect="#form" class="stack-6" }}
+            {{ partial:components/form_input handle="email" type="email" label="{ trans:strings.account_email }" required="true" old_value="{ old:email }" }}
 
-            {{ user:forgot_password_form reset_url="{ intranet:password_reset_entry | url }" redirect="#form" error_redirect="#form" class="flex flex-col gap-6" }}
-                {{ partial:components/form_input handle="email" type="email" label="{ trans:strings.account_email }" required="true" old_value="{ old:email }" }}
+            {{ if errors }}
+                {{ partial:components/notification type="error" content="{ errors | list }" }}
+            {{ /if }}
 
-                {{ if errors }}
-                    {{ partial:components/notification type="error" content="{ errors | list }" }}
-                {{ /if }}
+            {{ if success }}
+                {{ partial:components/notification type="success" content="{ success }" }}
+            {{ /if }}
 
-                {{ if success }}
-                    {{ partial:components/notification type="success" content="{ success }" }}
-                {{ /if }}
-
-                {{ partial:components/form_submit label="{ trans:strings.account_password_reset_request }" }}
-            {{ /user:forgot_password_form }}
-        </div>
+            <div class="flex justify-end">
+                {{ partial:components/button as="button" button_type="button" label="{ trans:strings.account_password_reset_request }" }}
+            </div>
+        {{ /user:forgot_password_form }}
     </div>
 </section>
 <!-- End: /page_builder/_password_forgotten.antlers.html -->
