--- a/resources/presets/intranet/resources/views/page_builder/_register.antlers.html
+++ b/resources/presets/intranet/resources/views/page_builder/_register.antlers.html
@@ -9,67 +9,37 @@
     {{ redirect to="{ intranet:account_entry | url }" }}
 {{ /if }}
 
-{{# Set originating outing so we can redirect after creating and verifying an account. #}}
-{{ if get:redirect }}
-    {{ session:set :originating_outing="get:redirect" }}
-{{ /if }}
-
-<section class="overflow-hidden -mt-12 md:-mt-20">
-    <div class="fluid-container grid md:grid-cols-12 gap-8 md:gap-12">
-        <div class="md:col-span-6 lg:col-span-5 lg:col-start-2 relative p-6 mr-2 mb-2 bg-white rounded-lg" id="form">
-            <div class="absolute top-2 -right-2 -bottom-2 left-2 z-behind rounded-lg rounded-br-xl bg-secondary"></div>
-
-            {{ partial:typography/prose class="[&>h1,&>h2]:text-secondary [&>h1,&>h2]:text-4xl md:[&>h1,&>h2]:text-6xl [&>h1,&>h2]:mb-2 mb-8" }}
-                {{ block:introduction }}
-            {{ /partial:typography/prose }}
-
-            {{ user:register_form redirect="{ intranet:email_verify_entry | url }" error_redirect="#form" class="flex flex-col gap-6" }}
-                <div class="hidden">
-                    {{# Honeypot #}}
-                    <label class="font-bold" for="{{ config:statamic:users:registration_form_honeypot_field }}">{{ config:statamic:users:registration_form_honeypot_field | ucfirst }} <sup class="text-yellow-400">*</sup></label>
-                    <input class="form-input w-full" id="{{ config:statamic:users:registration_form_honeypot_field }}" type="text" name="{{ config:statamic:users:registration_form_honeypot_field }}" tabindex="-1" autocomplete="off">
-                </div>
-
-
-                {{ partial:components/form_input handle="first_name" type="text" label="{ trans:strings.account_first_name }" required="true" old_value="{ old:first_name }" }}
-
-                {{ partial:components/form_input handle="last_name" type="text" label="{ trans:strings.account_last_name }" required="true" old_value="{ old:last_name }" }}
-
-                {{ partial:components/form_input handle="email" type="email" label="{ trans:strings.account_email }" required="true" old_value="{ old:email }" }}
-
-                {{ partial:components/form_input handle="password" type="password" label="{ trans:strings.account_password }" required="true" old_value="{ old:password }" }}
-
-                {{ partial:components/form_input handle="password_confirmation" type="password" label="{ trans:strings.account_password_confirmation }" required="true" old_value="{ old:password_confirmation }" }}
-
-                {{ if errors }}
-                    {{ partial:components/notification type="error" content="{ errors | list }" }}
-                {{ /if }}
-
-                {{ partial:components/form_submit label="{ trans:strings.account_register }" }}
-            {{ /user:register_form }}
-
-            <div class="relative my-6">
-                <div class="absolute inset-0 flex items-center" aria-hidden="true">
-                    <div class="w-full border-t border-neutral-300"></div>
-                </div>
-                <div class="relative flex justify-center">
-                    <span class="bg-white px-2 text-sm text-neutral-500">{{ trans:strings.account_or }}</span>
-                </div>
-            </div>
-
-            <div class="flex flex-col gap-2">
-                {{ partial:components/oauth_button type="register" vendor="google" href="{ oauth:google }" }}
-                {{# {{ partial:components/oauth_button type="register" vendor="microsoft" href="{ oauth:microsoft }" }} #}}
-                {{ partial:components/oauth_button type="register" vendor="facebook"  href="{ oauth:facebook }" }}
-            </div>
-        </div>
-
-        {{ partial:typography/prose class="md:col-span-6 lg:col-span-5 md:py-8 relative" }}
-            {{ svg:circle class="absolute top-0 right-0 translate-x-1/3 w-54 h-54 fill-quaternary mix-blend-multiply" }}
-            {{ block:text }}
-                {{ partial src="components/{type}" }}
-            {{ /block:text }}
+<section class="fluid-grid">
+    <div class="span-content md:col-span-6 md:col-start-[col-1] stack-8" id="form">
+        {{ partial:typography/prose }}
+            {{ block:introduction }}
         {{ /partial:typography/prose }}
+
+        {{ user:register_form redirect="{ intranet:email_verify_entry | url }" error_redirect="#form" class="stack-6" }}
+            <div class="hidden">
+                {{# Honeypot #}}
+                <label class="font-bold" for="{{ config:statamic:users:registration_form_honeypot_field }}">{{ config:statamic:users:registration_form_honeypot_field | ucfirst }} <sup class="text-yellow-400">*</sup></label>
+                <input class="form-input w-full" id="{{ config:statamic:users:registration_form_honeypot_field }}" type="text" name="{{ config:statamic:users:registration_form_honeypot_field }}" tabindex="-1" autocomplete="off">
+            </div>
+
+            {{ partial:components/form_input handle="first_name" type="text" label="{ trans:strings.account_first_name }" required="true" old_value="{ old:first_name }" }}
+
+            {{ partial:components/form_input handle="last_name" type="text" label="{ trans:strings.account_last_name }" required="true" old_value="{ old:last_name }" }}
+
+            {{ partial:components/form_input handle="email" type="email" label="{ trans:strings.account_email }" required="true" old_value="{ old:email }" }}
+
+            {{ partial:components/form_input handle="password" type="password" label="{ trans:strings.account_password }" required="true" old_value="{ old:password }" }}
+
+            {{ partial:components/form_input handle="password_confirmation" type="password" label="{ trans:strings.account_password_confirmation }" required="true" old_value="{ old:password_confirmation }" }}
+
+            {{ if errors }}
+                {{ partial:components/notification type="error" content="{ errors | list }" }}
+            {{ /if }}
+
+            <div class="flex justify-end">
+                {{ partial:components/button as="button" button_type="button" label="{ trans:strings.account_register }" }}
+            </div>
+        {{ /user:register_form }}
     </div>
 </section>
 <!-- End: /page_builder/_register.antlers.html -->
