--- a/resources/presets/intranet/resources/views/page_builder/_password_reset.antlers.html
+++ b/resources/presets/intranet/resources/views/page_builder/_password_reset.antlers.html
@@ -27,7 +27,7 @@
             {{ /if }}
 
              <div class="flex justify-end">
-                {{ partial:components/button as="button" button_type="button" label="{ trans:strings.account_password_reset_request }" }}
+                {{ partial:components/button as="button" button_type="button" label="{ trans:strings.account_password_reset }" }}
             </div>
         {{ /user:reset_password_form }}
     </div>
