--- a/resources/presets/intranet/resources/views/page_builder/_account.antlers.html
+++ b/resources/presets/intranet/resources/views/page_builder/_account.antlers.html
@@ -26,11 +26,11 @@
 
             <div class="md:col-span-8">
                 {{ user:profile_form redirect="#form" error_redirect="#form" id="form" class="grid md:grid-cols-2 gap-6 pt-1.5" }}
-                    {{ partial:components/form_input handle="first_name" type="text" label="{ trans:strings.account_first_name }" required="true" old_value="{ old:first_name }" value="{ first_name }" }}
+                    {{ partial:components/form_input field_handle="first_name" type="text" label="{ trans:strings.account_first_name }" required="true" old_value="{ old:first_name }" value="{ first_name }" }}
 
-                    {{ partial:components/form_input handle="last_name" type="text" label="{ trans:strings.account_last_name }" required="true" old_value="{ old:last_name }" value="{ last_name }" }}
+                    {{ partial:components/form_input field_handle="last_name" type="text" label="{ trans:strings.account_last_name }" required="true" old_value="{ old:last_name }" value="{ last_name }" }}
 
-                    {{ partial:components/form_input handle="email" type="email" label="{ trans:strings.account_email }" required="true" old_value="{ old:email }" value="{ email }" }}
+                    {{ partial:components/form_input field_handle="email" type="email" label="{ trans:strings.account_email }" required="true" old_value="{ old:email }" value="{ email }" }}
 
                     {{ if errors }}
                         {{ partial:components/notification type="error" class="md:col-span-2" content="{ errors | list }" }}
@@ -60,11 +60,11 @@
 
             <div class="md:col-span-8">
                 {{ user:password_form redirect="#form" error_redirect="#form" id="form" class="grid md:grid-cols-2 gap-6 pt-1.5" }}
-                    {{ partial:components/form_input handle="current_password" type="password" label="{ trans:strings.account_current_password }" required="true" old_value="{ old:current_password }" }}
+                    {{ partial:components/form_input field_handle="current_password" type="password" label="{ trans:strings.account_current_password }" required="true" old_value="{ old:current_password }" }}
 
-                    {{ partial:components/form_input handle="password" type="password" label="{ trans:strings.account_new_password }" required="true" old_value="{ old:password }" }}
+                    {{ partial:components/form_input field_handle="password" type="password" label="{ trans:strings.account_new_password }" required="true" old_value="{ old:password }" }}
 
-                    {{ partial:components/form_input handle="password_confirmation" type="password" label="{ trans:strings.account_new_password_confirmation }" required="true" old_value="{ old:password_confirmation }" }}
+                    {{ partial:components/form_input field_handle="password_confirmation" type="password" label="{ trans:strings.account_new_password_confirmation }" required="true" old_value="{ old:password_confirmation }" }}
 
                     {{ if errors }}
                         {{ partial:components/notification type="error" class="md:col-span-2" content="{ errors | list }" }}
