--- a/resources/presets/intranet/resources/views/page_builder/_login.antlers.html
+++ b/resources/presets/intranet/resources/views/page_builder/_login.antlers.html
@@ -16,10 +16,10 @@
         {{ /partial:typography/prose }}
 
         {{ user:login_form redirect="{ get:redirect ?? intranet:account_entry | url }" error_redirect="#form" class="stack-6" }}
-            {{ partial:components/form_input handle="email" type="email" label="{ trans:strings.account_email }" required="true" old_value="{ old:email }" }}
+            {{ partial:components/form_input field_handle="email" type="email" label="{ trans:strings.account_email }" required="true" old_value="{ old:email }" }}
 
             <div class="stack-2">
-                {{ partial:components/form_input handle="password" type="password" label="{ trans:strings.account_password }" required="true" old_value="{ old:password }" }}
+                {{ partial:components/form_input field_handle="password" type="password" label="{ trans:strings.account_password }" required="true" old_value="{ old:password }" }}
 
                 <a class="inline-block text-sm underline" href="{{ intranet:password_forgotten_entry | url }}">{{ trans:strings.account_password_forgotten }}</a>
             </div>
