--- a/resources/presets/intranet/resources/views/page_builder/_password_forgotten.antlers.html
+++ b/resources/presets/intranet/resources/views/page_builder/_password_forgotten.antlers.html
@@ -16,7 +16,7 @@
         {{ /partial:typography/prose }}
 
         {{ user:forgot_password_form reset_url="{ intranet:password_reset_entry | url }" redirect="#form" error_redirect="#form" class="stack-6" }}
-            {{ partial:components/form_input handle="email" type="email" label="{ trans:strings.account_email }" required="true" old_value="{ old:email }" }}
+            {{ partial:components/form_input field_handle="email" type="email" label="{ trans:strings.account_email }" required="true" old_value="{ old:email }" }}
 
             {{ if errors }}
                 {{ partial:components/notification type="error" content="{ errors | list }" }}
