--- a/resources/presets/intranet/resources/views/page_builder/_password_reset.antlers.html
+++ b/resources/presets/intranet/resources/views/page_builder/_password_reset.antlers.html
@@ -12,11 +12,11 @@
         {{ /partial:typography/prose }}
 
         {{ user:reset_password_form redirect="{ intranet:account_entry | url }" error_redirect="#form" class="stack-6" }}
-            {{ partial:components/form_input handle="email" type="email" label="{ trans:strings.account_email }" required="true" old_value="{ old:email }" }}
+            {{ partial:components/form_input field_handle="email" type="email" label="{ trans:strings.account_email }" required="true" old_value="{ old:email }" }}
 
-            {{ partial:components/form_input handle="password" type="password" label="{ trans:strings.account_password }" required="true" old_value="{ old:password }" }}
+            {{ partial:components/form_input field_handle="password" type="password" label="{ trans:strings.account_password }" required="true" old_value="{ old:password }" }}
 
-            {{ partial:components/form_input handle="password_confirmation" type="password" label="{ trans:strings.account_password_confirmation }" required="true" old_value="{ old:password_confirmation }" }}
+            {{ partial:components/form_input field_handle="password_confirmation" type="password" label="{ trans:strings.account_password_confirmation }" required="true" old_value="{ old:password_confirmation }" }}
 
             {{ if errors }}
                 {{ partial:components/notification type="error" content="{ errors | list }" }}
