--- a/resources/presets/intranet/resources/views/page_builder/_register.antlers.html
+++ b/resources/presets/intranet/resources/views/page_builder/_register.antlers.html
@@ -22,15 +22,15 @@
                 <input class="form-input w-full" id="{{ config:statamic:users:registration_form_honeypot_field }}" type="text" name="{{ config:statamic:users:registration_form_honeypot_field }}" tabindex="-1" autocomplete="off">
             </div>
 
-            {{ partial:components/form_input handle="first_name" type="text" label="{ trans:strings.account_first_name }" required="true" old_value="{ old:first_name }" }}
+            {{ partial:components/form_input field_handle="first_name" type="text" label="{ trans:strings.account_first_name }" required="true" old_value="{ old:first_name }" }}
 
-            {{ partial:components/form_input handle="last_name" type="text" label="{ trans:strings.account_last_name }" required="true" old_value="{ old:last_name }" }}
+            {{ partial:components/form_input field_handle="last_name" type="text" label="{ trans:strings.account_last_name }" required="true" old_value="{ old:last_name }" }}
 
-            {{ partial:components/form_input handle="email" type="email" label="{ trans:strings.account_email }" required="true" old_value="{ old:email }" }}
+            {{ partial:components/form_input field_handle="email" type="email" label="{ trans:strings.account_email }" required="true" old_value="{ old:email }" }}
 
-            {{ partial:components/form_input handle="password" type="password" label="{ trans:strings.account_password }" required="true" old_value="{ old:password }" }}
+            {{ partial:components/form_input field_handle="password" type="password" label="{ trans:strings.account_password }" required="true" old_value="{ old:password }" }}
 
-            {{ partial:components/form_input handle="password_confirmation" type="password" label="{ trans:strings.account_password_confirmation }" required="true" old_value="{ old:password_confirmation }" }}
+            {{ partial:components/form_input field_handle="password_confirmation" type="password" label="{ trans:strings.account_password_confirmation }" required="true" old_value="{ old:password_confirmation }" }}
 
             {{ if errors }}
                 {{ partial:components/notification type="error" content="{ errors | list }" }}
