--- a/resources/presets/news/resources/views/page_builder/_news.antlers.html
+++ b/resources/presets/news/resources/views/page_builder/_news.antlers.html
@@ -7,7 +7,7 @@
 <!-- /page_builder/_{{ handle }}.antlers.html -->
 {{ partial:page_builder/block }}
     <div class="span-content grid md:grid-cols-12 gap-fluid-grid-gap">
-        {{ title ?= { partial:typography/h1 as="h2" :content="title" class="md:col-span-12" } }}
+        {{ heading ?= { partial:typography/h1 as="h2" :content="heading" class="md:col-span-12" } }}
 
         {{ collection:{{ handle }} sort="date:desc" limit="3" as="items" }}
             {{ unless no_results }}
