Use extracted `page-builder` class

--- a/resources/presets/events/resources/views/events/show.antlers.html
+++ b/resources/presets/events/resources/views/events/show.antlers.html
@@ -41,7 +41,7 @@
     }
 </script>
 
-<main class="py-12 md:py-16 lg:py-24 stack-12 md:stack-16 lg:stack-24" id="content">
+<main class="page-builder" id="content">
     <section class="fluid-grid stack-8">
         <header class="span-content md:col-start-[col-3] md:col-span-8 stack-4">
             {{ partial:typography/h1 :content="title" class="mt-4 text-center" }}
