--- a/resources/presets/vacancies/resources/views/vacancies/show.antlers.html
+++ b/resources/presets/vacancies/resources/views/vacancies/show.antlers.html
@@ -42,7 +42,7 @@
     }
 </script>
 
-<main class="py-12 md:py-16 lg:py-24 stack-12 md:stack-16 lg:stack-24" id="content">
+<main class="page-builder" id="content">
     <section class="fluid-grid">
         <div class="contents stack-12">
             {{ partial:typography/h1 :content="title" class="span-content" }}
