--- a/resources/presets/search/resources/views/search.antlers.html
+++ b/resources/presets/search/resources/views/search.antlers.html
@@ -9,7 +9,7 @@
 {{ /section:seo_title }}
 
 <!-- /search.antlers.html -->
-<main class="py-12 md:py-16 lg:py-24 stack-12 md:stack-16 lg:stack-24" id="content">
+<main class="page-builder" id="content">
     <section class="fluid-grid stack-6">
         <div class="span-content md:col-start-[col-3] md:col-span-8">
             {{ partial:typography/h1 class="mb-2" content="{trans:strings.search_results_for} &OpenCurlyDoubleQuote;<span class='italic'>{get:q}</span>&CloseCurlyDoubleQuote;" }}
