--- a/resources/presets/default_blocks/resources/views/layout/_default_blocks.antlers.html
+++ b/resources/presets/default_blocks/resources/views/layout/_default_blocks.antlers.html
@@ -5,6 +5,7 @@
 #}}
 
 {{ _current_entry_id = id }}
+{{ _current_entry_collection = collection:handle }}
 {{ _requested_position = position ?? 'after_content' }}
 {{ _slug = label | slugify}}
 
@@ -16,32 +17,46 @@
 
         {{ _should_show = false }}
 
-        {{# Check visibility mode for this group #}}
-        {{ if visibility_mode == 'all' }}
-            {{ _should_show = true }}
-        {{ elseif visibility_mode == 'whitelist' }}
-            {{# Check if current page is in whitelist #}}
-            {{ whitelist_entries }}
-                {{ if id == _current_entry_id }}
-                    {{ _should_show = true }}
-                {{ /if }}
-            {{ /whitelist_entries }}
-        {{ elseif visibility_mode == 'blacklist' }}
-            {{ _should_show = true }}
-            {{# Check if current page is in blacklist #}}
-            {{ blacklist_entries }}
-                {{ if id == _current_entry_id }}
-                    {{ _should_show = false }}
-                {{ /if }}
-            {{ /blacklist_entries }}
-        {{ /if }}
-
-        {{# Check for page-specific override if the fieldset is used #}}
-        {{ if visibility_override }}
-            {{ if visibility_override == 'show' }}
+        {{# Check visibility mode for entry based visiblity. #}}
+        {{ if visibility == 'entry' }}
+            {{ if visibility_mode_collections == 'all' }}
                 {{ _should_show = true }}
-            {{ elseif visibility_override == 'hide' }}
-                {{ _should_show = false }}
+            {{ elseif visibility_mode_entries == 'whitelist' }}
+                {{# Check if current page is in whitelist #}}
+                {{ whitelist_entries }}
+                    {{ if id == _current_entry_id }}
+                        {{ _should_show = true }}
+                    {{ /if }}
+                {{ /whitelist_entries }}
+            {{ elseif visibility_mode_entries == 'blacklist' }}
+                {{ _should_show = true }}
+                {{# Check if current page is in blacklist #}}
+                {{ blacklist_entries }}
+                    {{ if id == _current_entry_id }}
+                        {{ _should_show = false }}
+                    {{ /if }}
+                {{ /blacklist_entries }}
+            {{ /if }}
+
+        {{# Check visibility mode for collection based visiblity. #}}
+        {{ elseif visibility == 'collection' }}
+            {{ if visibility_mode_collections == 'all' }}
+                {{ _should_show = true }}
+            {{ elseif visibility_mode_collections == 'whitelist' }}
+                {{# Check if current collection is in whitelist #}}
+                {{ whitelist_collections }}
+                    {{ if handle == _current_entry_collection }}
+                        {{ _should_show = true }}
+                    {{ /if }}
+                {{ /whitelist_collections }}
+            {{ elseif visibility_mode_collections == 'blacklist' }}
+                {{ _should_show = true }}
+                {{# Check if current collection is in blacklist #}}
+                {{ blacklist_collections }}
+                    {{ if handle == _current_entry_collection }}
+                        {{ _should_show = false }}
+                    {{ /if }}
+                {{ /blacklist_collections }}
             {{ /if }}
         {{ /if }}
 
