--- a/resources/presets/news/resources/views/news/show.antlers.html
+++ b/resources/presets/news/resources/views/news/show.antlers.html
@@ -39,7 +39,7 @@
             {{ partial:typography/h1 :content="title" class="text-center" }}
 
             <figure>
-                {{ partial:statamic-peak-tools::components/picture :image="image" sizes="(min-width: 1280px) 1150px, (min-width: 768px) 90vw" aspect_ratio="3/2" lazy="true" cover="true" class="aspect-[3/2]" }}
+                {{ picture :image="image" sizes="(min-width: 1280px) 1150px, (min-width: 768px) 90vw" aspect_ratio="3/2" lazy="true" cover="true" class="aspect-[3/2]" }}
             </figure>
         </header>
     </div>
