--- a/resources/presets/clients/resources/views/page_builder/_clients.antlers.html
+++ b/resources/presets/clients/resources/views/page_builder/_clients.antlers.html
@@ -19,7 +19,7 @@
 
         {{ {{ handle }} }}
             <a class="md:col-span-2 hover:scale-105 motion-safe:transition-transform group" href="{{ website }}" target="_blank" rel="noopener" aria-label="{{ title }}">
-                {{ partial:statamic-peak-tools::components/picture :image="logo" class="grayscale group-focus-visible:grayscale-0 group-hover:grayscale-0 motion-safe:transition" }}
+                {{ picture :image="logo" class="grayscale group-focus-visible:grayscale-0 group-hover:grayscale-0 motion-safe:transition" }}
             </a>
         {{ /{{ handle }} }}
     </div>
