--- a/resources/presets/image_credits/resources/views/page_builder/_image_credits.antlers.html
+++ b/resources/presets/image_credits/resources/views/page_builder/_image_credits.antlers.html
@@ -18,7 +18,7 @@
             {{ images where (copyright.name !== null) orderby (copyright.name 'asc') }}
                 <figure class="md:col-span-3">
                     <div class="aspect-square">
-                        {{ partial:statamic-peak-tools::components/picture :image="url" sizes="(min-width: 1280px) 1280px, (min-width: 768px) 20vw, 50vw" aspect_ratio="1/1" cover="true" }}
+                        {{ picture :image="url" sizes="(min-width: 1280px) 1280px, (min-width: 768px) 20vw, 50vw" aspect_ratio="1/1" cover="true" }}
                     </div>
                     <figcaption class="mt-4">
                         {{ if copyright:url }}
