--- a/resources/presets/testimonials/resources/views/page_builder/_testimonials.antlers.html
+++ b/resources/presets/testimonials/resources/views/page_builder/_testimonials.antlers.html
@@ -29,7 +29,7 @@
                     <figcaption class="flex items-center gap-3">
                         {{ if image }}
                             <div class="size-12 rounded-full overflow-clip" aria-hidden="true">
-                                {{ partial:statamic-peak-tools::components/picture :image="image" sizes="44px" aspect_ratio="1/1" lazy="true" cover="true" }}
+                                {{ picture :image="image" sizes="44px" aspect_ratio="1/1" lazy="true" cover="true" }}
                             </div>
                         {{ /if }}
 
