Remove redundant lazy parameter on picture tag

--- a/resources/presets/events/resources/views/events/show.antlers.html
+++ b/resources/presets/events/resources/views/events/show.antlers.html
@@ -47,7 +47,7 @@
             {{ partial:typography/h1 :content="title" class="mt-4 text-center" }}
 
             <figure>
-                {{ picture :image="image" sizes="(min-width: 1280px) 1150px, (min-width: 768px) 90vw" aspect_ratio="3/1" lazy="true" cover="true" class="aspect-[3/1]" }}
+                {{ picture :image="image" sizes="(min-width: 1280px) 1150px, (min-width: 768px) 90vw" aspect_ratio="3/1" cover="true" class="aspect-[3/1]" }}
             </figure>
         </header>
 
